Mon Feb 23 17:30:15 2004  Tim Janik  <timj@gtk.org>

	* sfidl-parser.cc (parseChoiceValue): fix simple assigments to
	choice values.

Mon Feb 23 04:04:38 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-parser.cc: Bugfix: It is now possible to use fully qualified
	constant names (such as Bse::STANDARD) within param specs.

Mon Feb 23 01:27:25 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-clientc.* sfidl-hostc.* sfidl-cbase.*: Code cleanup of the
	--host-c binding. Moved common functionality from CodeGeneratorClientC
	and CodeGeneratorHostC to CodeGeneratorCBase.

	* sfidl-options.cc: Don't suggest the user to specify --interface or
	--implementation (these flags don't exist any longer).

Sun Feb 22 22:10:34 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-options.*: Remove generateConstant, generateSignalStuff and
	generateProcedures option. The first two were not really used, and
	each language binding knows whether to generate procedures or not (the
	client bindings do, the other bindings don't).

	* sfidl-clientc.*: Code cleanup: splitted the run() method in lots
	of smaller methods. Adapted to the changes in the Options class.

	* sfidl-corec.cc sfidl-hostc.cc: Adapted to the changes in the Options
	class. Started code cleanup.

	* sfidl-clientcxx.cc: Fixed bug - there shouldn't be info string based
	information in the binding generated for records/sequences.
	
	* sfidl-generator.*: Removed CodeGeneratorQt (and the --qt option),
	which didn't do anything useful until now, anyway.

Sun Feb 22 01:44:09 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.*: Put seperate classes in seperate files. So this
	now should contain class CodeGenerator, nothing more.

	* sfidl-cbase.* sfidl-cxxbase.*: Base classes for C / C++ language
	bindings (from sfidl-generator.cc).
	
	* sfidl-clientc.* sfidl-hostc.* sfidl-corec.*: Three new C language
	bindings (--client-c --host-c --core-c), all containing the code from
	sfidl-generator.cc
